--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -19,29 +19,32 @@
     <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
 
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "Team", "Team.html" %>
 
     <!-- Notification link-->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">
+    <% link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
       <div class="badge-container">
         <i class="fa fa-envelope-o"></i>
         <div class="badge badge-blue">3</div>
       </div>
+    <% end %>
+
     </a>
 
     <!-- Profile picture and dropdown -->
     <div class="navbar-wagon-item">
       <div class="dropdown">
-        <img src="https://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+        <%= image_tag "charles.jpg", class: "avatar dropdown-toggle", id:"navbar-wagon-menu", data: {toggle:"dropdown"}%>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><%= link_to "Profile", "#" %></li>
+          <li><%= link_to "Dashboard", "#" %></li>
+          <li><%= link_to "Log Out", "#" %></li>
         </ul>
       </div>
     </div>
 
     <!-- Button (call-to-action) -->
+
     <a href="" class="navbar-wagon-item navbar-wagon-button btn">Post stuff</a>
   </div>
 
@@ -50,10 +53,12 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Profile", "#" %></li>
+        <li><%= link_to "Dashboard", "#" %></li>
+        <li><%= link_to "Log Out", "#" %></li>
       </ul>
     </div>
   </div>
 </div>
+
+
